# ugudu

./: .env.example  .gitignore  .golangci.yml  LICENSE  Makefile  README.md  go.mod  go.sum  install.ps1  install.sh  package.json
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: ugudu.rb
chocolatey/: ugudu.nuspec
chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
cmd/ugudu/: activity.go  config.go  conversation.go  debug.go  main.go  project.go  spec.go  standup.go
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: _config.yml  api.md  architecture.md  configuration.md  index.md  installation.md  mcp.md  quickstart.md  team-specs.md
examples/teams/: dev-team.yaml  research-team.yaml  trading-team.yaml
internal/api/: embed.go  server.go  websocket.go
internal/config/: config.go  config_test.go
internal/daemon/: client.go  daemon.go
internal/logger/: logger.go
internal/manager/: manager.go  manager_test.go  store.go  store_test.go
internal/mcp/: handlers.go  server.go
internal/provider/: anthropic.go  anthropic_test.go  groq.go  ollama.go  openai.go  openrouter.go  provider.go  ratelimit.go  ratelimit_test.go  registry.go  registry_test.go
internal/specgen/: specgen.go  specgen_test.go
internal/team/: member.go  member_test.go  orchestrator.go  team.go  types.go  types_test.go  workflow.go
internal/templates/: embed.go  embed_test.go
internal/tools/: git.go  (+7 more)
scripts/: install.js  prepack.js  release.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
(+25 files in other folders)
